--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -36,7 +36,7 @@
               <span class="glyphicon glyphicon-user"></span> {{ user.username }}
       </a>
       <span class="glyphicon glyphicon-plus" data-toggle="tooltip"  data-placement="bottom" 
-                                             title="Create new..."></span>
+                                             title="Create new project"  onClick="location.href='/project/new/'"></span>
       <span class="glyphicon glyphicon-cog" data-toggle="tooltip"  data-placement="bottom" 
                       title="Profile Settings" onClick="location.href='/settings/profile'"></span>
       <span class="glyphicon glyphicon-off" data-toggle="tooltip"  data-placement="bottom" 
