--- a/oncoFinder2/templates/profiles/index.html
+++ b/oncoFinder2/templates/profiles/index.html
@@ -51,8 +51,10 @@
                   <li class="list-group-item">
                     <span class="glyphicon glyphicon-folder-open" style="color:#ccc"></span>
                     &nbsp;&nbsp; <a href="/project/{{project.name}}">{{ project.name }}</a>
-                     <button type="button" class="close pull-right" aria-hidden="true">&times;</button>
-                     <span class="badge" style="margin: 0 20px 0 0 ">42</span>
+                     <button type="button" class="close pull-right with-tooltip" aria-hidden="true" data-toggle="tooltip"  data-placement="bottom" 
+                                             title="Delete" style="margin: 0 20px 0 0 ">&times;</button>
+                     <span class="badge with-tooltip" data-toggle="tooltip"  data-placement="bottom" 
+                                             title="Documents" style="margin: 0 20px 0 0 ">{{project.get_documents_number}}</span>
                      <div class="text-muted"><small>Created at: {{project.created_at}}</small></div>
                   </li>
                 {% endfor %}
@@ -64,8 +66,10 @@
                   <li class="list-group-item">
                     <span class="glyphicon glyphicon-folder-open" style="color:#ccc"></span>
                     &nbsp;&nbsp; <a href="/project/{{project.name}}">{{ project.name }}</a>
-                     <button type="button" class="close pull-right" aria-hidden="true">&times;</button>
-                     <span class="badge" style="margin: 0 20px 0 0 ">42</span>
+                     <button type="button" class="close pull-right with-tooltip" aria-hidden="true" data-toggle="tooltip"  data-placement="bottom" 
+                                             title="Delete" style="margin: 0 20px 0 0 ">&times;</button>
+                     <span class="badge with-tooltip" data-toggle="tooltip"  data-placement="bottom" 
+                                             title="Documents" style="margin: 0 20px 0 0 ">{{project.get_documents_number}}</span>
                      <div class="text-muted"><small>Owner: <a href="/user/{{project.owner}}">{{project.owner}}</a></small></div>
                      <div class="text-muted"><small>Created at: {{project.created_at}}</small></div>
                   </li>
