--- a/oncoFinder2/templates/project/project_detail.html
+++ b/oncoFinder2/templates/project/project_detail.html
@@ -53,7 +53,8 @@
                   Norms: {{doc.norm_num}}<br/>
                   Rows: {{doc.row_num}}</td>
               <td>{{doc.description}}</td>
-              <td><button type="button" class="close " aria-hidden="true">&times;</button></td>
+              <td><button type="button" class="close pull-right with-tooltip" aria-hidden="true" data-toggle="tooltip"  data-placement="bottom" 
+                                             title="Delete" style="margin: 0 20px 0 0 ">&times;</button></td>
             
             </tr>           
             {% empty %}
