--- a/oncoFinder2/templates/document/document_detail.html
+++ b/oncoFinder2/templates/document/document_detail.html
@@ -15,6 +15,11 @@
   </h2>
   <span class="text-muted">Created at: {{document.created_at}}<br/>
   By: {{document.created_by}}</span>
+  
+  <button class="btn btn-default btn-sm pull-right" >
+               <span class="glyphicon glyphicon-play"></span> &nbsp;<b>Start calculation</b>
+           </button>
+           
   <hr/>
   <div class="wrapper1">
     <div class="upper_scroll"></div>
