--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -7,8 +7,8 @@
   
     <title>{% block title %}OF v2.0{% endblock %}</title>
     
-    <link rel="stylesheet" href="/media/css/bootstrap.css" type='text/css' />
-    <link rel="stylesheet" href="/media/css/style.css" type='text/css' />    
+    <link rel="stylesheet" href="/static/css/bootstrap.css" type='text/css' />
+    <link rel="stylesheet" href="/static/css/style.css" type='text/css' />    
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -16,9 +16,9 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="/media/js/jquery-2.1.0.min.js"></script>
-    <script src="/media/js/bootstrap.js"></script>
-    <script src="/media/js/oncofinder2.js"></script>
+    <script src="/static/js/jquery-2.1.0.min.js"></script>
+    <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/oncofinder2.js"></script>
 </head>
 
 <body>
@@ -27,7 +27,7 @@
     <div class="container">
       <div class="navbar-header" id="ws_nav">
         <a class="" href="/">
-        <img src='/media/images/oncofinderLogo.png' alt='OncoFinder v2.0' title='OncoFinder v2.0'/>
+        <img src='/static/images/oncofinderLogo.png' alt='OncoFinder v2.0' title='OncoFinder v2.0'/>
         Onco<span id="ws_finder">Finder</span></a>
       </div>
       
