--- a/oncoFinder2/templates/website/index.html
+++ b/oncoFinder2/templates/website/index.html
@@ -34,7 +34,7 @@ transcriptomic data {% endblock %}
   <div class="row">
         <div class="col-lg-4" >
           <p style="text-align:center;">
-          <img class="img-circle" style="width:150px;" src="/media/images/biology_add.png" alt="Generic placeholder image">
+          <img class="img-circle" style="width:150px;" src="/static/images/biology_add.png" alt="Generic placeholder image">
           </p>
           <h2>Heading</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
@@ -42,7 +42,7 @@ transcriptomic data {% endblock %}
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <p style="text-align:center;">
-          <img class="img-circle" style="width:150px;" src="/media/images/e_learning_config.png" alt="Generic placeholder image">
+          <img class="img-circle" style="width:150px;" src="/static/images/e_learning_config.png" alt="Generic placeholder image">
           </p>
           <h2>Heading</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
@@ -50,7 +50,7 @@ transcriptomic data {% endblock %}
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <p style="text-align:center;">
-          <img class="img-circle" style="width:150px;" src="/media/images/laboratory_info.png" alt="Generic placeholder image">
+          <img class="img-circle" style="width:150px;" src="/static/images/laboratory_info.png" alt="Generic placeholder image">
           </p>
           <h2>Heading</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
@@ -68,7 +68,7 @@ transcriptomic data {% endblock %}
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/media/images/oncoPicture.png" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/static/images/oncoPicture.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -76,7 +76,7 @@ transcriptomic data {% endblock %}
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" src="/media/images/oncoPic2.png" alt="Generic placeholder image">
+          <img class="featurette-image img-responsive" src="/static/images/oncoPic2.png" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Feature heading 2 <span class="text-muted">Sub heading</span></h2>
