--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -18,6 +18,8 @@
     <![endif]-->
     <script src="/static/js/jquery-2.1.0.min.js"></script>
     <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/jsNetworkx.js"></script>
+    <script src="/static/js/d3.v2.min.js"></script>
     <script src="/static/js/oncofinder2.js"></script>
 </head>
 
@@ -44,10 +46,9 @@
       
      </div>   
       <ul class="nav navbar-nav navbar-left pr_upp_menu">
-            <li><a href="/ws/about/">Blog</a></li>
-            <li><a href="/pr/help/">Feedback</a></li>
-            <li><a href="/pr/help/">Report an issue</a></li>
-            <li><a href="/pr/help/">Help</a></li>
+            <!-- <li><a href="#">Blog</a></li>  -->           
+            <li><a href="/db/pathways/">Biochem database</a></li>
+            <li><a href="/db/drugs/">Drugs database</a></li>
      </ul>
      
     </div>
