Change sigma fileter >=

--- a/oncoFinder2/templates/core/test.html
+++ b/oncoFinder2/templates/core/test.html
@@ -8,7 +8,12 @@
 <h1>Testing Playground</h1>
 
 
-{{a}} --- {{b}}
+<h5>{{summ}}</h5>
+
+{% for path in pathways %}
+{{path.name}}<br/>
+
+{%endfor%}
 
 
 
