--- a/oncoFinder2/templates/document/document_create.html
+++ b/oncoFinder2/templates/document/document_create.html
@@ -7,6 +7,8 @@
 <div class="alert alert-danger">
          <h4>Error!</h4>
 	      Error uploading file! <br/><br/>
+	      
+	      {{form.errors}}
 	      <a href="JavaScript:history.back(0)">Go back >> </a>
         </div>
 </div>
