--- a/oncoFinder2/static/css/style.css
+++ b/oncoFinder2/static/css/style.css
@@ -128,6 +128,13 @@
   height: 20px;
 }
 
+/***************** DATABASE */
+
+.pathway_list_ul {
+	list-style:none;
+	margin: 0;
+	padding: 0;
+}
 
  /*************************/
 #footer{
