--- a/oncoFinder2/templates/project/project_detail.html
+++ b/oncoFinder2/templates/project/project_detail.html
@@ -118,7 +118,9 @@
          <h4>Important!</h4>
 	      Accepted file formats are: <b>CSV, TXT, XLS, XLSX</b> with delimeters <b>\t , ;</b> <br/>
 	      Files should have names in English letters only! <br/>
-	      Preferable encoding is UTF-8 <br/>
+	      Column with gene names should be called <strong>SYMBOL</strong> <br/>
+	      Columns with Samples should contain <strong>"Tumour"</strong> in it's name <br/>
+	      Columns with Norms should contain <strong>"Norm"</strong> in it's name <br/>
 	      If an error occurs, please contact OncoFinder administration.
         </div>
         <form action="/document/new/" id="doc_create_form" method="post" enctype="multipart/form-data">
