--- a/oncoFinder2/templates/website/index.html
+++ b/oncoFinder2/templates/website/index.html
@@ -36,7 +36,7 @@ transcriptomic data {% endblock %}
           <p style="text-align:center;">
           <img class="img-circle" style="width:150px;" src="/static/images/biology_add.png" alt="Generic placeholder image">
           </p>
-          <h2>Heading</h2>
+          <h2>More than 250 Pathways in Biochem Database</h2>
           <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
@@ -44,7 +44,7 @@ transcriptomic data {% endblock %}
           <p style="text-align:center;">
           <img class="img-circle" style="width:150px;" src="/static/images/e_learning_config.png" alt="Generic placeholder image">
           </p>
-          <h2>Heading</h2>
+          <h2>Create and manage your Projects easily</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
@@ -52,7 +52,7 @@ transcriptomic data {% endblock %}
           <p style="text-align:center;">
           <img class="img-circle" style="width:150px;" src="/static/images/laboratory_info.png" alt="Generic placeholder image">
           </p>
-          <h2>Heading</h2>
+          <h2>More than 100 Drugs and increasing</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
@@ -79,7 +79,7 @@ transcriptomic data {% endblock %}
           <img class="featurette-image img-responsive" src="/static/images/oncoPic2.png" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Feature heading 2 <span class="text-muted">Sub heading</span></h2>
+          <h2 class="featurette-heading">Download full reports <span class="text-muted">in one single file!</span></h2>
           <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
         </div>
       </div>     
