Ajax search for Path Drug

--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -49,8 +49,14 @@
      </div>   
       <ul class="nav navbar-nav navbar-left pr_upp_menu">
             <!-- <li><a href="#">Blog</a></li>  -->           
-            <li><a href="/db/pathways/">Biochem database</a></li>
-            <li><a href="/db/drugs/">Drugs database</a></li>
+            <li><a href="/db/pathways/"><img src='/static/images/laboratory_info.png' style="width: 40px; margin-right: 3px;"/>
+                Biochem database
+                </a>
+            </li>
+            <li><a href="/db/drugs/"><img src='/static/images/pharmacy.png' style="width: 40px; margin-right: 3px;"/>
+                Drugs database
+                </a>
+            </li>
      </ul>
      
     </div>
