--- a/oncoFinder2/static/css/style.css
+++ b/oncoFinder2/static/css/style.css
@@ -83,7 +83,9 @@
 	height: 60px;
 	margin: 0 0 0 50px;
 } 
-
+.pr_upp_menu li a {
+	padding: 10px ;
+}
 .pr_header_menu{
 	
 }
@@ -134,6 +136,10 @@
 	list-style:none;
 	margin: 0;
 	padding: 0;
+}
+
+.path_list_picture img{
+	height: 70px; margin: 0 20px 0 0;
 }
 
 .chart {
