--- a/oncoFinder2/templates/database/pathway_detail.html
+++ b/oncoFinder2/templates/database/pathway_detail.html
@@ -6,7 +6,7 @@
 <div class="container">
         <h1>{{pathway.name}}</h1>
     <span class='pull-right'>
-       <a href='/db/pathways/'><<< back to pathways list</a>
+       <a href='{{ request.META.HTTP_REFERER }}'><<< back to pathways list</a>
     </span>
     <hr/>
    <div id="tabs">
@@ -97,7 +97,7 @@ Total = {{pathway.node_set.count}}
          },
         edge_style: { fill: function(d){ return d.data.color; }, 'stroke-width': 5 },
         label_style: {fill: 'black', 'font-size':'12px', 'text-anchor': 'middle',
-            'dominant-baseline': 'top', },
+            'dominant-baseline': 'top', 'font-weight': 'bold' },
         
     }, true);
     </script>
