add drug DB to template

--- a/oncoFinder2/templates/document/document_detail.html
+++ b/oncoFinder2/templates/document/document_detail.html
@@ -109,11 +109,13 @@ $(function(){
 });
 $(function(){
 	$(".upper_scroll").width($(".wrapper2 > table").width());
-	  $(".wrapper1").scroll(function(){ 
-	    $(".wrapper2").scrollLeft($(".wrapper1").scrollLeft());
+	  
+	$(".wrapper1").scroll(function(){ 
+	    $(".wrapper2").scrollLeft($(this).scrollLeft());
 	  });
-	  $(".wrapper2").scroll(function(){
-	    $(".wrapper1").scrollLeft($(".wrapper2").scrollLeft());
+	  
+	$(".wrapper2").scroll(function(){
+	    $(".wrapper1").scrollLeft($(this).scrollLeft());
 	  });
 	});
 
