--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -45,6 +45,9 @@
           
           {{ form.use_cnr.label_tag }}
           {{ form.use_cnr }}
+          <br/><br/>
+          {{ form.norm_choice.label_tag }}
+          {{ form.norm_choice }}
           </div>
           
     </div>
