--- a/oncoFinder2/templates/project/project_detail.html
+++ b/oncoFinder2/templates/project/project_detail.html
@@ -70,6 +70,7 @@
                       {% if doc.parameters.use_sigma %}
                         <br/>&nbsp;&nbsp;&nbsp; CNR lower = <strong>{{doc.parameters.cnr_low}}</strong>
                         <br/>&nbsp;&nbsp;&nbsp; CNR upper = <strong>{{doc.parameters.cnr_up}}</strong>
+                        <br/> Normal algorithm = <strong>{{doc.parameters.norm_algirothm}}</strong>
                       {% endif %}
                   {% endif %}
                  
