--- a/oncoFinder2/templates/core/test.html
+++ b/oncoFinder2/templates/core/test.html
@@ -10,10 +10,11 @@
 
 <h5>{{summ}}</h5>
 
-{% for path in pathways %}
-{{path.name}}<br/>
-
+{% for item in input%}
+{{item}}<br/>
 {%endfor%}
+
+
 
 
 
