--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -27,28 +27,61 @@
       <h3 class="panel-title">Calculation parameters</h3>
     </div>
     <div class="panel-body">
-       <form class="" role="form" action="" method="post"  id="calculation_parameters_form">
-          {% csrf_token %}       
-          <div class="form-group">
-            {{ form.sigma_num.label_tag }}
-            {{ form.sigma_num }}
+       <form class="form-horizontal" role="form" action="" method="post"  id="calculation_parameters_form">
+          {% csrf_token %}
+          <small>
           
-            {{ form.use_sigma.label_tag }}
-            {{ form.use_sigma }}
-            <br/><br/>
-          
-          {{ form.cnr_low.label_tag }}
-          {{ form.cnr_low }}
-          
-          {{ form.cnr_up.label_tag }}
-          {{ form.cnr_up }}
-          
-          {{ form.use_cnr.label_tag }}
-          {{ form.use_cnr }}
-          <br/><br/>
-          {{ form.norm_choice.label_tag }}
-          {{ form.norm_choice }}
+          <div class="form-group form-group-sm">
+          <div class="col-sm-10">
+          {{ form.db_choice.label_tag }}
           </div>
+          {% for db in form.db_choice %}
+	      <label for="{{ db.id_for_label }}" class="checkbox-inline">
+	        {{ db.tag }}
+	        {{ db.choice_label }}
+	      </label>
+	     {% endfor %}
+	     </div>
+          
+          <div class="form-group form-group-sm">
+          <div class="col-sm-10">
+          {{ form.norm_choice.label_tag }}
+          </div>
+          {% for radio in form.norm_choice %}
+	      <label for="{{ radio.id_for_label }}" class="checkbox-inline">
+	        {{ radio.tag }}
+	        {{ radio.choice_label }}
+	      </label>
+	     {% endfor %}
+	     </div>
+          
+                 
+          <div class="form-group form-group-sm">
+            <label for="{{ form.sigma_num.auto_id }}" class="col-sm-4 control-label">{{ form.sigma_num.label }}</label>            
+            <div class="col-sm-8">
+                {{ form.sigma_num }}
+                {{ form.use_sigma.label_tag }}&nbsp;&nbsp;
+                {{ form.use_sigma }}
+            </div>
+          </div>
+          
+          <div class="form-group form-group-sm">
+            <label for="{{ form.cnr_low.auto_id }}" class="col-sm-4 control-label">{{ form.cnr_low.label }}</label>            
+            <div class="col-sm-8">
+                {{ form.cnr_low }}
+            </div>
+          </div>
+          <div class="form-group form-group-sm">
+            <label for="{{ form.cnr_up.auto_id }}" class="col-sm-4 control-label">{{ form.cnr_up.label }}</label>            
+            <div class="col-sm-8">
+                {{ form.cnr_up }}
+                {{ form.use_cnr.label_tag }}&nbsp;&nbsp; 
+                {{ form.use_cnr }}
+            </div>
+          </div>
+           
+          
+          </small>
           
     </div>
     <div class="panel-footer">
